Application/bases/Backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3001
    - name: websocket
      port: 8080
      targetPort: 3333
  selector:
    app: Backend
