Application/bases/tileserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tileserver
spec:
  type: ClusterIP
  selector:
    app: tileserver
  ports:
  - name: http
    port: 80
    targetPort: 7800
